fix test file path